fixed the overlapping screen on smaller screen

--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,10 @@
   /* text-align: center; */
 }
 
-img {
-  margin: auto;
+section img {
+  border-radius: 20px;
+  margin:1em;
+  width: 80%;
 }
 
 div#about {
